[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprites/EggEater.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Scripts/EggEater.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/EggEater1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sfx/squash.wav" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.99994, 15.25 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.25, 5 )

[node name="EggEater" type="KinematicBody2D" groups=[
"Eater",
]]
collision_layer = 16
collision_mask = 30
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.125, 0 )
scale = Vector2( 0.738281, 0.582031 )
frames = SubResource( 2 )
playing = true

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10.5 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="FloorDetector" type="RayCast2D" parent="."]
position = Vector2( 0, -0.5 )
cast_to = Vector2( 0, 20 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16

[node name="topChecker" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 9.0

[node name="soundSquash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
